pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod
  namespace: demo
  labels:
    app: nginx

spec:
  containers:
    - name: nginx-container
      image: nginx:latest

      ports:
        - containerPort: 80
