postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: compact-url

spec:
  serviceName: postgres-service

  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres

        image: postgres:16

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

      volumes:
      - name: postgres-storage

        persistentVolumeClaim:
          claimName: postgres-pvc
