compacturl-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: compact-url-service
  namespace: compact-url

spec:
  type: ClusterIP

  selector:
    app: compact-url

  ports:
  - port: 80
    targetPort: 8080
