compacturl-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: compact-url-ingress
  namespace: compact-url

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: compact-url-service

            port:
              number: 80
